# Chat-with-DB-Deployment

./: .coverage  .gitignore  Chat_with_DB_Application_Overview.md  FUTURE_ENHANCEMENTS.md  Implementations.md  PHASE1_SEMANTIC_README.md  PHASE2_AGENTIC_README.md  PHASE2_TEST_REPORT.md  README.md  SEMANTIC_ENHANCEMENT_README.md  SPRINT6_SUMMARY.md  SQLITE_IMPROVEMENTS_SUMMARY.md  TODO.md  WREN_AI_INTEGRATION_STATUS.md  WREN_AI_TEST_RESULTS.md  average_shortage_fix_summary.md  average_shortage_issue_analysis.md  commit_frontend_changes.bat  e --abbrev-ref HEAD  multi_step_planning_final_summary.md  multi_step_planning_issues_analysis.md  multi_step_planning_summary.md  pytest.ini  requirements.txt  run_tests.py  simple_test.py  tatus agent-ui  test_advanced_retrieval.py  test_average_shortage_fix.py  test_comprehensive_query.py  test_constrained_sql_generation.py  test_energy_ontology.py  test_evaluation_framework.py  test_feedback_system.py  test_few_shot_examples.py  test_multi_step_planning.py  test_ontology_enhanced_rag.py  test_phase2_agentic.py  test_schema_metadata_injection.py  test_semantic_simple.py  (+5 more)
Chat-with-DB-Deployment/: .gitignore  AZURE_SQL_DEPLOYMENT_GUIDE.md  CLOUD_DEPLOYMENT_GUIDE.md  DEPLOYMENT_CLEANUP_SUMMARY.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ENHANCED_CLOUD_DEPLOYMENT.md  MDL_ENHANCEMENT_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  README.md  cloudbuild.yaml  deploy-gcp.ps1  deploy-gcp.sh  deploy.ps1  deploy.sh  deploy_enhanced.sh  deployment.env.example  docker-compose.cloud.yml  docker-compose.yml  env.template  migrate_sqlite_to_mssql.py  nginx.conf  pyproject.toml  quick_start.bat  requirements.txt  start_backend.py  stop.ps1  stop.sh  test_azure_connection.py
Chat-with-DB-Deployment/agent-ui/: Dockerfile  entrypoint.sh  nginx.conf
Chat-with-DB-Deployment/backend/: __init__.py  config.py  main.py
Chat-with-DB-Deployment/config/: power-sector-mdl1-backup.json  (+2 more)
(+106 files in other folders)
